--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ workflows:
     when: 
       and:
         - equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
-        - equal: [ true, << pipeline.parameters.module-b >> ] 
+        - equal: [ true, << pipeline.parameters.run-module-b >> ] 
     jobs:
       - module-b
       - module-b-post:
