Creating extra config files for Scheduled Pipeline and replacing run-setup parameter and removing from main setup config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ workflows:
           config-path: .circleci/config.yml
           # 3-column space-separated table for mapping; `path-to-test parameter-to-set value-for-parameter` for each row
           mapping: |
-            .* run-setup false
+#            .* run-setup false
             module-a/.* run-module-a true
             module-b/.* run-module-b true
   
