--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ workflows:
           # Compare files on main
           base-revision: main
           # Config for continuation; herein we reuse this config itself
-          config-path: .circleci/config.yml
+          config-path: module-a/.circleci/config.yml
           # 3-column space-separated table for mapping; `path-to-test parameter-to-set value-for-parameter` for each row
           mapping: |
             module-a/.* run-module-a true
@@ -62,15 +62,15 @@ workflows:
       - continuation/continue:
           pre-steps:
             - checkout
-          configuration_path: .circleci/config.yml 
-  module-a:
-    when: << pipeline.parameters.run-module-a >>
-    jobs:
-      - module-a
-  module-b:
-    when: << pipeline.parameters.run-module-b >>
-    jobs:
-      - module-b
-      - module-b-post:
-          requires:
-            - module-b
+          configuration_path: module-b/.circleci/config.yml 
+#  module-a:
+#    when: << pipeline.parameters.run-module-a >>
+#    jobs:
+#      - module-a
+#  module-b:
+#    when: << pipeline.parameters.run-module-b >>
+#    jobs:
+#      - module-b
+#      - module-b-post:
+#          requires:
+#            - module-b
