--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,8 +44,9 @@ workflows:
         equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
     jobs:
       - path-filtering/filter:
+          name: check-updated-files
           # Compare files on main
-          base-revision: main
+          base-revision: scheduled
           # Config for continuation; herein we reuse this config itself
           config-path: module-a/.circleci/config.yml
           # 3-column space-separated table for mapping; `path-to-test parameter-to-set value-for-parameter` for each row
