Adding in continue_config yml file to root of project

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ workflows:
           # Compare files on main
           base-revision: scheduled
           # Config for continuation; herein we reuse this config itself
-          config-path: module-a/.circleci/config.yml
+          config-path: .circleci/continue_config.yml
           # 3-column space-separated table for mapping; `path-to-test parameter-to-set value-for-parameter` for each row
           mapping: |
             module-a/.* run-module-a true
