Adding in continue_config yml file to .circleci folder and removing workflow refere3nces to non-existent jobs

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -19,10 +19,4 @@ jobs:
 workflows:
   module-a-workflow:
     jobs:
-      - common-pre
-      - module-a-build:
-          requires:
-            - common-pre
-      - module-a-hello-build/hello-build:
-          requires:
-            - common-pre
+      - module-a-build
