--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,13 +46,13 @@ workflows:
       - path-filtering/filter:
           name: check-updated-files
           # Compare files on main
-          base-revision: scheduled
+          base-revision: HEAD
           # Config for continuation; herein we reuse this config itself
           config-path: .circleci/continue_config.yml
           # 3-column space-separated table for mapping; `path-to-test parameter-to-set value-for-parameter` for each row
           mapping: |
-            module-a
-            module-b
+            module-a/.* run-module-a true
+            module-b/.* run-module-b true
   
   scheduled:
     when: 
@@ -62,15 +62,16 @@ workflows:
       - continuation/continue:
           pre-steps:
             - checkout
-          configuration_path: .circleci/continue_config.yml 
-#  module-a:
-#    when: << pipeline.parameters.run-module-a >>
-#    jobs:
-#      - module-a
-#  module-b:
-#    when: << pipeline.parameters.run-module-b >>
-#    jobs:
-#      - module-b
-#      - module-b-post:
-#          requires:
-#            - module-b
+          configuration_path: .circleci/continue_config.yml
+ 
+  module-a:
+    when: << pipeline.parameters.run-module-a >>
+    jobs:
+      - module-a
+  module-b:
+    when: << pipeline.parameters.run-module-b >>
+    jobs:
+      - module-b
+      - module-b-post:
+          requires:
+            - module-b
