--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,31 @@ version: 2.1
 
 setup: true
 
-orbs:
-  path-filtering: circleci/path-filtering@0.1.1
-  continuation: circleci/continuation@0.2.0
+#orbs:
+#  path-filtering: circleci/path-filtering@0.1.1
+#  continuation: circleci/continuation@0.2.0
 
 parameters:
-  run-module-a:
+  run-setup:
+    description: Whether it is a setup workflow or a continuation
+    type: boolean
+    default: true
+  force-all:
+    description: Emergency valve - forcibly build all the modules
     type: boolean
     default: false
-  run-module-b:
-    type: boolean
-    default: false
+  custom-parameter:
+    description: Some string to pass
+    type: string
+    default: ""
+
+#parameters:
+#  run-module-a:
+#    type: boolean
+#    default: false
+#  run-module-b:
+#    type: boolean
+#    default: false
 
 jobs:
   module-a:
@@ -38,21 +52,162 @@ jobs:
       - run: env
 
 workflows:
-  pre:
+  # The setup workflow
+  setup-workflow:
     when:
       not:
         equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
     jobs:
-      - path-filtering/filter:
-          name: check-updated-files
+      - config-splitting/setup-dynamic-config:
+          force-all: << pipeline.parameters.force-all >>
+          base-revision: main
+          # If A is modified, the job for A will run
+          # Similarly if B is modified, the job for B will run
+          # If C is modified, then the jobs for both C and B (as a dependency) will run
+          modules: |
+            module-a
+            module-b
+
+orbs:
+  # An "embedded" orb to facilitate config splitting
+  config-splitting:
+    # Dependencies
+    orbs:
+      continuation: circleci/continuation@0.2.0
+    # Commands for the setup workflow
+    commands:
+      list-changed-modules:
+        parameters:
+          modules:
+            description: |
+              Directories which should be built upon changes.
+              Each row represents a space-separated list of the root directories for modules, each of which must has own `.circleci/config.yml`.
+              The first item of the list will be tested for changes, and will be added to the filtered list of modules if there are any changes.
+              The subsequent items, if there are any, will also be added to the filtered list of modules if there are any changes in the directory specified as the first item.
+
+              CAVEAT: Directory names having white spaces cannot be specified.
+            type: string
+          modules-filtered:
+            description: Path to the file where the filtered list of modules is generated
+            type: string
+            default: /tmp/modules-filtered.txt
+          base-revision:
+            description: Revision to compare with the current HEAD
+            type: string
+            default: main
+          force-all:
+            description: Emergency valve - forcibly build all the modules
+            type: boolean
+            default: false
+        steps:
+          - run:
+              name: Generate the list of modules having changes
+              command: |
+                # Add each module to `modules-filtered` if 1) `force-all` is set to `true`, 2) there is a diff against `base-revision`, 3) there is no `HEAD~1` (i.e., this is the very first commit for the repo) OR 4) there is a diff against the previo$
+                cat \<< EOD | sed -e '/^$/d' | while read row; do module="$(echo "$row" | awk '{ print $1 }')"; if [ << parameters.force-all >> == 'true' ] || [ $(git diff --name-only << parameters.base-revision >> "$module" | wc -l) -gt 0 ] || (! git$
+                << parameters.modules >>
+                EOD
+
+      merge-modular-configs:
+        parameters:
+          modules:
+            description: Path to the file for the list of the modules to build
+            type: string
+            default: /tmp/modules-filtered.txt
+          shared-config:
+            description: Path to the config providing shared resources (such as prerequisite jobs and common commands)
+            type: string
+            default: .circleci/config.yml
+          continue-config:
+            description: Path to the internally-used config for continuation
+            type: string
+            default: .circleci/continue-config.yml
+        steps:
+          - run:
+              name: Merge configs
+              command: |
+                # If `modules` is unavailable, stop this job without continuation
+                if [ ! -f "<< parameters.modules >>" ] || [ ! -s "<< parameters.modules >>" ]
+                then
+                  echo 'Nothing to merge. Halting the job.'
+                  circleci-agent step halt
+                  exit
+                fi
+
+                # Convert a list of dirs to a list of config.yml
+                sed -i -e 's/$/\/.circleci\/config.yml/g' "<< parameters.modules >>"
+
+                # If `shared-config` exists, append it at the end of `modules`
+                if [ -f << parameters.shared-config >> ]
+                then
+                  echo "<< parameters.shared-config >>" >> "<< parameters.modules >>"
+                fi
+
+                xargs -a "<< parameters.modules >>" yq -y -s 'reduce .[] as $item ({}; . * $item)' | tee "<< parameters.continue-config >>"
+    jobs:
+      # The job for the setup workflow
+      setup-dynamic-config:
+        parameters:
+          modules:
+            description: Directories which should be tested for changes; one directory per line. Each directory must have `.circleci/config.yml`.
+            type: string
+          base-revision:
+            description: Revision to compare with the current HEAD
+            type: string
+            default: main
+          force-all:
+            description: Emergency valve - forcibly build all the modules
+            type: boolean
+            default: false
+          modules-filtered:
+            description: Path to the file where the filtered list of modules is generated
+            type: string
+            default: /tmp/modules-filtered.txt
+          shared-config:
+            description: Path to the config providing shared resources (such as prerequisite jobs and common commands)
+            type: string
+            default: .circleci/config.yml
+          continue-config:
+            description: Path to the internally-used config for continuation
+            type: string
+            default: .circleci/continue-config.yml
+        docker:
+          - image: cimg/python:3.9
+        steps:
+          - checkout
+          - run:
+              name: Install yq
+              command: pip install yq
+          - list-changed-modules:
+              modules: << parameters.modules >>
+              modules-filtered: << parameters.modules-filtered >>
+              base-revision: << parameters.base-revision >>
+              force-all: << parameters.force-all >>
+          - merge-modular-configs:
+              modules: << parameters.modules-filtered >>
+              shared-config: << parameters.shared-config >>
+              continue-config: << parameters.continue-config >>
+          - continuation/continue:
+              configuration_path: << parameters.continue-config >>
+              parameters: '{"run-setup":false}'
+
+
+#workflows:
+#  pre:
+#    when:
+#      not:
+#        equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
+#    jobs:
+#      - path-filtering/filter:
+#          name: check-updated-files
           # Compare files on main
-          base-revision: HEAD
+#          base-revision: HEAD
           # Config for continuation; herein we reuse this config itself
-          config-path: .circleci/continue_config.yml
+#          config-path: .circleci/continue_config.yml
           # 3-column space-separated table for mapping; `path-to-test parameter-to-set value-for-parameter` for each row
-          mapping: |
-            module-a/.* run-module-a true
-            module-b/.* run-module-b true
+#          mapping: |
+#            module-a/.* run-module-a true
+#            module-b/.* run-module-b true
   
   scheduled:
     when: 
@@ -64,14 +219,14 @@ workflows:
             - checkout
           configuration_path: .circleci/continue_config.yml
  
-  module-a:
-    when: << pipeline.parameters.run-module-a >>
-    jobs:
-      - module-a
-  module-b:
-    when: << pipeline.parameters.run-module-b >>
-    jobs:
-      - module-b
-      - module-b-post:
-          requires:
-            - module-b
+#  module-a:
+#    when: << pipeline.parameters.run-module-a >>
+#    jobs:
+#      - module-a
+#  module-b:
+#    when: << pipeline.parameters.run-module-b >>
+#    jobs:
+#      - module-b
+#      - module-b-post:
+#          requires:
+#            - module-b
