Using different orb and logic for non-scheduled pipelines and moving scheduled pipeline definition up under Continuation one

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,17 @@ workflows:
           modules: |
             module-a
             module-b
+  
+  scheduled:
+    when:
+      and:
+        - equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
+    jobs:
+      - continuation/continue:
+          pre-steps:
+            - checkout
+          configuration_path: .circleci/continue_config.yml
+
 
 orbs:
   # An "embedded" orb to facilitate config splitting
