Putting back in the dash and amending version of the orb and changing scheduled job to be module-b

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,8 +186,9 @@ workflows:
       and:
         - equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
     jobs:
-      - continuation/continue:
-          pre-steps:
-            - checkout
-          configuration_path: .circleci/continue_config.yml
+      - module-b
+  #    - continuation/continue:
+  #        pre-steps:
+  #          - checkout
+  #        configuration_path: .circleci/continue_config.yml
 
