Putting back in the dash and amending version of the orb and changing scheduled job to be module-b and putting back in module b an c logic

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,6 +180,7 @@ workflows:
           modules: |
             module-a
             module-b
+            module-c module-b
 
   scheduled:
     when:
