Amending all A,B,C jobs to remove orb jobs and got rid of common pre job

--- a/module-c/.circleci/config.yml
+++ b/module-c/.circleci/config.yml
@@ -16,10 +16,7 @@ jobs:
 workflows:
   module-c-workflow:
     jobs:
-      - common-pre
-      - module-c-build:
-          requires:
-            - common-pre
+      - module-c-build
 #      - module-c-hello-build/hello-build:
 #          requires:
 #            - common-pre
