--- a/module-a/.circleci/config.yml
+++ b/module-a/.circleci/config.yml
@@ -17,7 +17,4 @@ jobs:
 workflows:
   module-a-workflow:
     jobs:
-      - common-pre
-      - module-a-build:
-          requires:
-            - common-pre
+      - module-a-build
