Amending all A,B,C jobs to remove orb jobs and got rid of common pre job and amending conditional logic of setup workflow to take out not statements

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,10 +174,10 @@ orbs:
 
 workflows:
   setup-workflow:
-    when:
-      and:
-        - equal: << pipeline.parameters.run-setup >>
-        - not: [ scheduled_pipeline, << pipeline.trigger_source >> ]
+    when: << pipeline.parameters.run-setup >>
+#      and:
+#        - equal: << pipeline.parameters.run-setup >>
+#        - not: [ scheduled_pipeline, << pipeline.trigger_source >> ]
     jobs:
       - config-splitting/setup-dynamic-config:
           force-all: << pipeline.parameters.force-all >>
