Amending as per Support recommendations

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 
-setup: << pipeline.parameters.run-setup >>
+setup: true
 
 parameters:
   run-setup:
@@ -174,10 +174,9 @@ orbs:
 
 workflows:
   setup-workflow:
-    when: << pipeline.parameters.run-setup >>
-#      and:
-#        - equal: << pipeline.parameters.run-setup >>
-#        - not: [ scheduled_pipeline, << pipeline.trigger_source >> ]
+    when:
+      not:
+        equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
     jobs:
       - config-splitting/setup-dynamic-config:
           force-all: << pipeline.parameters.force-all >>
