--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -180,6 +180,7 @@ workflows:
     jobs:
       - config-splitting/setup-dynamic-config:
           force-all: << pipeline.parameters.force-all >>
+          setup: false
           base-revision: main
           # If A is modified, the job for A will run
           # Similarly if B is modified, the job for B will run
