Amending Module B and putting back in pipeline parameters setting at the top and commenting out run-setup at the end

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,7 +149,7 @@ orbs:
               continue-config: << parameters.continue-config >>
           - continuation/continue:
               configuration_path: << parameters.continue-config >>
-              parameters: '{"run-setup":false}'
+ #             parameters: '{"run-setup":false}'
 
 workflows:
   setup-workflow:
